# master-of-hwp

./: .gitignore  01_기술검증_체크리스트.md  02_MCP_서버_설계서.md  03_MVP_개발일정.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.en.md  README.ko.md  README.md  master-of-hwp_기획안_2026-04-19.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.md  feature.md  recipe.md
.github/workflows/: ci.yml  release.yml
docs/: .pdca-status.json  ARCHITECTURE.md  CLI_MCP_연동_가이드.md  GUI_실행_가이드.md  RHWP_실연동_가이드.md  RHWP_저장_실연동_가이드.md  ROADMAP.md  codex.config.toml.example  opencode.json.example  현재_개발_상태_2026-04-19.md
examples/: 01_read_sections.py  02_extract_tables.py  03_edit_paragraph.py
gui/: app.css  app.js  index.html
handoff/codex/: 002_hwpx_zip_reader.md  003_hwp5_text_extractor.md  006_table_enumeration.md  007_write_path_replace_paragraph.md  011_studio_package.md
handoff/codex/done/: 001_hwp_binary_parser_spike.md  003_hwp5_text_extractor.md  005_paragraph_enumeration.md  006_table_enumeration.md  007_write_path_replace_paragraph.md  008_v0_1_release_prep.md  009_hwpx_table_cell_edit.md  010_ai_edit_loop.md  011_studio_package.md
handoff/review/: 001_review_hwp5_reader.md  001_review_response.md  003_review_hwp5_text_extractor.md  005_review_paragraph_enumeration.md  005_review_response.md  006_review_response.md  006_review_table_enumeration.md  007_review_write_path.md  008_review_release_prep.md  009_review_response.md  009_review_table_cell_edit.md  010_review_ai_edit_loop.md  010_review_response.md  011_review_response.md  011_review_studio_package.md
master_of_hwp/: __init__.py
master_of_hwp/adapters/: __init__.py  hwp5_reader.py  hwpx_reader.py
master_of_hwp/ai/: __init__.py  intent.py  locator.py  providers.py
master_of_hwp/core/: __init__.py  document.py
master_of_hwp/fidelity/: __init__.py  harness.py  roundtrip.py
master_of_hwp/operations/: __init__.py
mcp-server/: config.py  document_store.py  gui_ai.py  gui_server.py
mcp-server/cli_wrappers/: claude_wrapper.py
mcp-server/orchestration/: prompt_builder.py  response_mapper.py
mcp-server/tools/: replace_selection_text.py
notes/: CLI_연동_요약_2026-04-19.md  HWP_저장_로드맵_2026-04-19.md  개발메모_2026-04-19.md  검증기록_2026-04-19.md  검증기록_템플릿.md  실연동_현황_2026-04-19.md
scripts/: codex_status.sh  run_gui.sh  run_mcp_server.sh
studio/: README.md  pyproject.toml
studio/master_of_hwp_studio/: __init__.py  __main__.py  cli.py  server.py
studio/master_of_hwp_studio/mcp/: __init__.py  server.py
studio/master_of_hwp_studio/resources/: claude_desktop_mcp.json
studio/master_of_hwp_studio/rhwp_editor/: index.html
studio/master_of_hwp_studio/rhwp_editor/assets/: index-05hZSzvd.js  index-D5U9ZGP0.js  index-DDqV_vjr.js  index-DiTK_iVs.js  rhwp_bg-n0SWNrtC.wasm
studio/master_of_hwp_studio/web/: __init__.py  app.css  app.js  index.html
studio/tests/: test_cli.py  test_http_api.py
tests/: conftest.py
tests/fidelity/: test_roundtrip.py
tests/integration/: test_ai_edit.py  test_document_sections.py  test_document_table_edit.py
tests/unit/: test_ai_skeleton.py  test_document.py  test_hwp5_reader.py  test_hwpx_reader.py  test_intent.py  test_table_cell_write.py  test_write_path.py
