[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "master-of-hwp"
version = "0.1.0"
description = "Read Korean HWP/HWPX documents in Python; edit paragraphs in HWPX. AI-friendly API."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "moon", email = "jpmjkim23@gmail.com" },
]
keywords = ["hwp", "hwpx", "hancom", "korean", "ai", "llm", "document"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Korean",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Text Processing",
]
dependencies = [
    "olefile>=0.47",
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "hypothesis>=6.100",
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.10",
    "twine>=5.1",
    "types-olefile; python_version>='3.11'",
]
mcp = [
    "fastmcp>=3.2.0",
]
ai = [
    "anthropic>=0.40.0",
]

[project.urls]
Homepage = "https://github.com/reallygood83/master-of-hwp"
Repository = "https://github.com/reallygood83/master-of-hwp"
Documentation = "https://github.com/reallygood83/master-of-hwp/tree/main/docs"
Issues = "https://github.com/reallygood83/master-of-hwp/issues"

[tool.hatch.build.targets.wheel]
packages = ["master_of_hwp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: fast isolated unit tests",
    "integration: tests that cross module boundaries",
    "fidelity: round-trip fidelity benchmarks (may require samples/)",
    "property: property-based tests via Hypothesis",
]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RET"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
