[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "master-of-hwp-studio"
version = "0.1.0"
description = "One-click HWP editing Studio for non-developers — MCP server + web GUI bundled"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "moon", email = "jpmjkim23@gmail.com" },
]
dependencies = [
    "master-of-hwp>=0.1.0",
    "fastmcp>=3.2.0",
    "uvicorn[standard]>=0.30.0",
    "click>=8.1.0",
]

[project.scripts]
mohwp = "master_of_hwp_studio.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["master_of_hwp_studio"]

[tool.pytest.ini_options]
testpaths = ["tests"]
