[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "master-of-hwp-studio"
version = "0.7.6"
description = "One-click HWP editing Studio for non-developers — MCP server + web GUI bundled"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "moon", email = "jpmjkim23@gmail.com" },
]
dependencies = [
    "master-of-hwp>=0.2.4",
    "fastmcp>=3.2.0",
    "uvicorn[standard]>=0.30.0",
    "click>=8.1.0",
]

[project.scripts]
mohwp = "master_of_hwp_studio.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["master_of_hwp_studio"]
# rhwp_editor is a non-Python asset directory (no __init__.py). The automatic
# package walker would pick up some files but miss others, so we exclude it
# from the auto-scan and bring it back with a single force-include entry.
# This avoids "Duplicate filename in local headers" errors on PyPI upload.
exclude = ["master_of_hwp_studio/rhwp_editor/**"]

[tool.hatch.build.targets.wheel.force-include]
"master_of_hwp_studio/rhwp_editor" = "master_of_hwp_studio/rhwp_editor"

[tool.pytest.ini_options]
testpaths = ["tests"]
